# Python-RAT

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_builder.py  run_server.py
builder/: builder.py  config_template.py
builder/output/: complete_rat_client.py
builder/output/modules/: audio_recorder.py  screen_capture.py  system_info.py  webcam.py
client/: main.py
client/modules/: file_ops.py  keylogger.py
client/utils/: crypto.py  persistence.py
docs/: installation.md  usage.md
server/: main.py  rat_server.py  rat_server_fixed.py
server/handlers/: command_handler.py  file_handler.py
server/utils/: crypto.py  logger.py
shared/: config.py  protocol.py
tests/: test_client.py  test_connection.py  test_crypto.py  test_server.py  test_setup.py
