[tool.poetry]
name = "rat-project"
version = "0.1.0"
description = "Remote Administration Tool - Projet academique"
authors = ["Student <student@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cryptography = "^41.0.0"
pillow = "^10.0.0"
opencv-python = "^4.8.0"
pyaudio = "^0.2.11"
pynput = "^1.7.6"
mss = "^9.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]